--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  background-color: #615738;
-  overflow: hidden;
-}
 
 @media screen and (max-width: 600px)
 {
@@ -36,6 +31,14 @@ body {
         white-space: nowrap;
         transition: all 2s ease;
     }
+
+   body
+   {
+      background-image: url('BrickWall3\ Phone\ Portrait.png'); 
+      overflow: hidden;
+      background-size: cover;
+      background-position: center;
+   }
 }
 
 @media screen and (min-width: 601px) and (max-width:1200px)
@@ -73,6 +76,14 @@ body {
 
 @media screen and (min-width: 1201px)
 {
+   body
+   {
+      background-image: url('BrickWall2.png'); 
+      overflow: hidden;
+      background-size: cover;
+      background-position: center;
+   }
+
 #name
     {
         color: #A18835;
