--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
 
 #name
     {
-        color: blue;
+        color: #A18835;
         font-size: 4.5rem;
         margin: 0;
         margin-left: 425px;
