--- a/styles.css
+++ b/styles.css
@@ -75,12 +75,12 @@
   .nameContainer,
   .deeContainer,
   .aContainer {
-    width: 300px;
-    height: 130px;
+    width: 100px;
+    height: 100px;
   }
 
   .name, .three, .two {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 
   body {
@@ -89,6 +89,7 @@
     background-position: center;
     background-repeat: no-repeat;
     overflow: hidden;
+    height: 85vh;
   }
 }
 
