--- a/styles2.css
+++ b/styles2.css
@@ -20,12 +20,22 @@ h2
   color: white;
 }
 
-img
-{
+.image {
+  position: relative;
   width: 100%;
-  height: auto;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+  border-radius: 10px;
 }
 
+.image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /*.image
 {
   padding: 11em;
