--- a/styles2.css
+++ b/styles2.css
@@ -74,7 +74,8 @@ h2
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;  /* ← switch from cover to contain */
+  background-color: black; /* ← so black bars show */
 }
 
 .card
