--- a/styles2.css
+++ b/styles2.css
@@ -60,6 +60,37 @@ h2
   animation: hueShift 10s infinite alternate;
 }
 
+.descriptionbox a
+{
+  text-decoration: none;
+  color: inherit; 
+}
+
+.fade-out {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: black; /* or white, or any color */
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  z-index: 9999;
+}
+.fade-out.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+img 
+{
+    transition: transform 0.3s ease-in-out;
+}
+
+img:hover 
+{
+    transform: scale(1.2); /* Enlarges image by 20% on hover */
+}
+
 .image {
   position: relative;
   width: 100%;
