--- a/styles3.css
+++ b/styles3.css
@@ -51,6 +51,16 @@ h2
   justify-content: center;
 }
 
+img 
+{
+    transition: transform 0.3s ease-in-out;
+}
+
+img:hover 
+{
+    transform: scale(1.2); /* Enlarges image by 20% on hover */
+}
+
 @media screen and (max-width: 600px) {
 h1
 {
