working on nav bar

--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,8 @@ h1
   }
 }
 
-@keyframes hueShift {
+@keyframes hueShift 
+{
   0% { filter: hue-rotate(0deg); }
   100% { filter: hue-rotate(20deg); }
 }
