--- a/styles4.css
+++ b/styles4.css
@@ -122,7 +122,8 @@ p
   "box-3 box-4 box-2";
 }
 
-#fullscreen-overlay {
+#fullscreen-overlay 
+{
   position: fixed;
   top: 0;
   left: 0;
@@ -138,19 +139,22 @@ p
   z-index: 9999;
 }
 
-#fullscreen-overlay img {
+#fullscreen-overlay img 
+{
   max-width: 90%;
   max-height: 90%;
   transform: scale(0.8);
   transition: transform 0.5s ease;
 }
 
-#fullscreen-overlay.active {
+#fullscreen-overlay.active 
+{
   opacity: 1;
   visibility: visible;
 }
 
-#fullscreen-overlay.active img {
+#fullscreen-overlay.active img 
+{
   transform: scale(1);
   transition: transform 0.5s ease;
 }
