--- a/styles2.css
+++ b/styles2.css
@@ -24,16 +24,112 @@ body
   }
 }
 
+@keyframes flicker-orange {
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    opacity: 1;
+    text-shadow:
+      0 0 5px #F5C549,
+      0 0 10px #F5C549,
+      0 0 40px #F5C549;
+  }
+  20%, 22%, 24%, 55% {
+    opacity: 0.6;
+    text-shadow: none;
+  }
+}
+
+@keyframes flicker {
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    opacity: 1;
+    text-shadow:
+      0 0 5px #4e43e0,
+      0 0 10px #4e43e0,
+      0 0 40px #4e43e0;
+  }
+
+  20%, 22%, 24%, 55% {
+    opacity: 0.6;
+    text-shadow: none;
+  }
+}
+
+.abouttext:hover 
+{
+  animation: flicker 5s infinite;
+}
+
+.threedeetext:hover
+{
+  animation: flicker-yellow 5s infinite;
+}
+
+.twodeetext:hover
+{
+  animation: flicker-orange 5s infinite;
+}
+
+.abouttext
+{
+    color: #4e43e0;
+  font-family: 'Tilt Neon', sans-serif;
+  font-weight: 400;  /* or any weight the font supports */
+  font-style: normal;
+
+  animation: hueShift 5s infinite alternate;
+
+      text-shadow:
+    0 0 5px #4e43e0,
+    0 0 10px #4e43e0,
+    0 0 20px #4e43e0,
+    0 0 40px #4e43e0;
+}
+
+.threedeetext
+{
+  font-family: 'Tilt Neon', sans-serif;
+  font-weight: 400;  /* or any weight the font supports */
+  font-style: normal;
+  color: #F5EE42;
+
+  text-shadow: 0 0 20px #F5EE42, 0 0 40px #F5EE42;
+
+  animation: hueShift 5s infinite alternate;
+}
+
+.twodeetext
+{
+  color: #F5C549;
+  font-family: 'Tilt Neon', sans-serif;
+  font-weight: 400;  /* or any weight the font supports */
+  font-style: normal;
+  text-shadow: 0 0 20px #F5C549, 0 0 40px #F5C549;
+  
+  animation: hueShift 5s infinite alternate;
+}
+
+.nav 
+{
+  display: flex;        /* put children in a row */
+  gap: 2em;             /* spacing between items */
+  align-items: center;  /* vertically align if needed */
+  justify-content: center; /* or space-between, center, etc */
+  padding: 1em 1em 0.5em 1em; 
+}
+
+.nav a 
+{
+  text-decoration: none;
+}
+
+.about a {
+  text-decoration: none;
+  color: inherit; /* Keep the text color same as h1 */
+}
+
 h1:hover
 {
     animation: flicker-yellow 5s infinite;
 }
-
-/*.card:has(h1:hover) 
-{
-  background-color:  rgba(128, 128, 128, 0.058);
-  transition: background-color 0.5s ease;
-}*/
 
 h1
 {
@@ -50,6 +146,7 @@ h1
 
 h2
 {
+  margin-top: 0;
   font-family: 'Tilt Neon', sans-serif;
   font-weight: 400;  /* or any weight the font supports */
   font-style: normal;
@@ -137,7 +234,15 @@ h2
     text-align: center;
 }
 
+h3
+{
+    font-size: 1rem;
+    transition: all 2s ease;
 }
+
+}
+
+
 
 
 @media screen and (min-width: 601px) and (max-width:1200px) {
@@ -154,6 +259,12 @@ h2
     text-align: center;
 }
 
+h3
+{
+    font-size: 1.5rem;
+    transition: all 2s ease;
+}
+
 }
 
 @media screen and (min-width: 1201px) {
@@ -168,6 +279,12 @@ h2
     font-size: 5rem;
     transition: all 2s ease;
     text-align: center;
+}
+
+h3
+{
+    font-size: 1.5rem;
+    transition: all 2s ease;
 }
 
 }
