--- a/styles4.css
+++ b/styles4.css
@@ -275,7 +275,7 @@ p
 @media screen and (max-width: 600px) {
 h1
 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     transition: all 2s ease;
 }
 
@@ -289,12 +289,18 @@ h2
 .grid-container
 {
   display: grid;
-  gap: 1em;
+  gap: 0.5em;
   grid-auto-rows: 200px;
   grid-auto-columns: 200px;
   grid-template-areas: "box-1 box-1"
+  "box-1 box-1"
+  "box-5 box-5"
+  "box-5 box-5"
+  "box-2 box-2"
   "box-2 box-2"
   "box-3 box-3"
+  "box-3 box-3"
+  "box-4 box-4"
   "box-4 box-4";
 }
 
@@ -303,7 +309,7 @@ h2
 @media screen and (min-width: 601px) and (max-width:1200px) {
 h1
 {
-    font-size: 2rem;
+    font-size: 1rem;
     transition: all 2s ease;
 }
 
@@ -320,9 +326,9 @@ h2
   grid-auto-rows: 200px;
   grid-auto-columns: 200px;
   gap: 0.5em;
-  grid-template-areas: "box-1 box-1 box-2 box-2"
-  "box-1 box-1 box-2 box-2"
-  "box-3 box-4 box-2 box-2";
+  grid-template-areas: "box-1 box-1 box-5 box-5 box-2"
+  "box-1 box-1 box-5 box-5 box-2"
+  "box-3 box-3 box-4 box-4 box-2";
 }
 
 }
@@ -344,12 +350,12 @@ h2
 {
   display: grid;
   grid-auto-rows: 200px;
-  grid-auto-rows: 200px;
+  grid-auto-columns: 200px;
   /*border: solid red;*/
   gap: 1em;
-  grid-template-areas: "box-1 box-1 box-2"
-  "box-1 box-1 box-2"
-  "box-3 box-4 box-2";
+  grid-template-areas: "box-1 box-1 box-5 box-5 box-2 box-2"
+  "box-1 box-1 box-5 box-5 box-2 box-2"
+  "box-3 box-3 box-4 box-4 box-2 box-2";
 }
 
 }
