--- a/styles4.css
+++ b/styles4.css
@@ -181,6 +181,7 @@ h2
 {
     background-color: rgba(87, 87, 87, 0.289);
     border-radius: 10px;
+    padding: 1em;
 }
 
 p
@@ -195,7 +196,7 @@ p
 .icon-container {
     display: flex;
     align-items: center;
-    background-color: rgba(87, 87, 87, 0.289);
+    background-color: rgba(157, 156, 156, 0.393);
     padding: 10px;
     border-radius: 8px;
     width: fit-content;
@@ -309,7 +310,7 @@ h2
 @media screen and (min-width: 601px) and (max-width:1200px) {
 h1
 {
-    font-size: 1rem;
+    font-size: 1.1rem;
     transition: all 2s ease;
 }
 
@@ -326,9 +327,9 @@ h2
   grid-auto-rows: 200px;
   grid-auto-columns: 200px;
   gap: 0.5em;
-  grid-template-areas: "box-1 box-1 box-5 box-5 box-2"
-  "box-1 box-1 box-5 box-5 box-2"
-  "box-3 box-3 box-4 box-4 box-2";
+  grid-template-areas: "box-1 box-1 box-5 box-2 box-2"
+  "box-1 box-1 box-5 box-2 box-2"
+  "box-3 box-3 box-4 box-2 box-2";
 }
 
 }
@@ -336,7 +337,7 @@ h2
 @media screen and (min-width: 1201px) {
 h1
 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     transition: all 2s ease;
 }
 
